# libfmcore

./: .gitignore  AUTHORS  Makefile.am  README  TODO  autogen.sh  configure.ac  libfmcore-2.0.pc.in  libfmcore-3.0.pc.in  libfmcore.geany  rebuild.sh
data/: Makefile.am  README  desktop.noname.gschema.xml
docs/: LibFmCore.odt  README  docs-fileinfo.c
po/: LINGUAS  POTFILES
src/: Makefile.am  fm-gtk.h  fm-qdata.h  fm.c  fm.h  fmcore.c  fmcore.h  gtk-compat.h  gtk3-migration.h
src/TEMP/: README  TEMP.c  fm-simple-job.c  jobs.vala  query-info-job.vala
src/TEMP/jobs/: change-attr-job.vala  fm-simple-job.h  jobs.vala
src/TEMP/jobs/job/: fm-file-ops-job-change-attr.c  fm-file-ops-job-xfer.h  fm-file-ops-job.c
src/TEMP/jobs/jobs-c-orig/: fm-dir-list-job.h  fm-file-ops-job.h  fm-job.h
src/TEMP/jobs/jobs-todo/: create-file-job.vala
src/TEMP/jobs/jobs-v1/: CopyJobWithTrash.vala  progress.glade
src/base/: fm-app-info.c  fm-app-info.h  fm-archiver.c  fm-archiver.h  fm-config.c  fm-config.h  fm-config.vala  fm-debug.h  fm-dummy-monitor.c  fm-dummy-monitor.h  fm-file-info-list.c  fm-file-info-list.h  fm-file-info.c  fm-file-info.h  fm-file-launcher.c  fm-folder.c  fm-folder.h  fm-icon.c  fm-icon.h  fm-list.c  fm-list.h  fm-mime-type.c  fm-mime-type.h  fm-monitor.c  fm-monitor.h  fm-path-list.c  fm-path-list.h  fm-path.c  fm-path.h  fm-utils.c  fm-utils.h
src/fm-vala/: Makefile.am
src/fmvala/: Makefile.am  fm-config.vala
src/gtk/: app-global-ui.c  exec-file-ui.c  fm-app-chooser-combo-box.c  fm-app-chooser-dlg.c  fm-app-menu-view.c  fm-cell-renderer-pixbuf.c  fm-cell-renderer-pixbuf.h  fm-cell-renderer-text.c  fm-cell-renderer-text.h  fm-clipboard.c  fm-clipboard.h  fm-dir-tree-item.c  fm-dir-tree-item.h  fm-dir-tree-model.c  fm-dir-tree-model.h  fm-dir-tree-view.c  fm-dir-tree-view.h  fm-dnd-auto-scroll.c  fm-dnd-auto-scroll.h  fm-dnd-dest.c  fm-dnd-dest.h  fm-dnd-src.c  fm-dnd-src.h  fm-file-menu.c  fm-file-menu.h  fm-file-properties.c  fm-folder-model.c  fm-folder-model.h  fm-folder-view.c  fm-folder-view.h  fm-gtk-file-launcher.c  fm-gtk-launcher.c  fm-gtk-launcher.h  fm-gtk-utils.c  fm-gtk-utils.h  fm-icon-pixbuf.c  fm-icon-pixbuf.h  fm-path-entry.c  fm-path-entry.h  fm-progress-dlg.c  (+2 more)
src/gtk-dlg/: fm-app-chooser-combo-box.c  fm-app-chooser-combo-box.h  fm-app-chooser-dlg.c  fm-app-chooser-dlg.h  fm-app-chooser-xml.c  fm-app-menu-view.c  fm-app-menu-view.h  fm-dlg-utils.c  fm-dlg-utils.h  fm-file-properties-xml.c  fm-file-properties.c  fm-file-properties.h  fm-gtk-launcher-xml.c  fm-gtk-launcher.c  fm-gtk-launcher.h  fm-progress-dlg.c  fm-progress-dlg.h  fm-user-input-dlg.c  fm-user-input-dlg.h
src/gtk/exo/: README  exo-icon-view.c  exo-icon-view.h  exo-lxde.c  exo-lxde.h  exo-private.c  exo-private.h  exo-tree-view.c  exo-tree-view.h
src/gtk/exo/patches/: 00-cell-renderer.patch  01-more-porting.patch  02-some-more-gtk3.patch  03-iconview-crippled.patch  04-required-properties.patch  README  exo-0.3.91-0.8.0.diff  exo-gtk3.diff  gtk3-treeview.diff  libexo-git-treeview.diff  libexo-git.diff  lxde-20090610.diff  lxde-treeview.diff  reset_select_function.patch  text-background-hack.diff
src/job/: fm-deep-count-job.c  fm-deep-count-job.h  fm-dir-list-job.c  fm-dir-list-job.h  fm-file-info-job.c  fm-file-info-job.h  fm-file-ops-job-change-attr.c  fm-file-ops-job-change-attr.h  fm-file-ops-job-delete.c  fm-file-ops-job-delete.h  fm-file-ops-job-xfer.c  fm-file-ops-job.c  fm-file-ops-job.h  fm-job.c  fm-job.h  fm-simple-job.c  fm-simple-job.h
src/jobs/: CopyJob.vala  DeleteJob.vala  FileJob.vala  Job.vala  Makefile.am  TrashJob.vala  copy-job.vala  delete-job.vala  file-job.vala  fm-deep-count-job.c  fm-deep-count-job.h  fm-dir-list-job.c  fm-dir-list-job.h  fm-file-info-job.c  fm-file-info-job.h  jobs.vala
src/jobs/Base/: FileJob.vala  Job.vala
src/jobs/FileJobs/: CopyJob.vala  DeleteJob.vala  TrashJob.vala
src/jobs/FmJobs/: fm-deep-count-job.c  fm-dir-list-job.c  fm-dir-list-job.h  fm-file-info-job.c  fm-file-info-job.h
src/jobs/UI/: FileJobUI.vala  GtkFileJobUI.vala  GtkFileJobUIXML.vala  GtkUI.vala  RenameDialog.vala  RenameDialogXML.vala  UI.vala
src/jobs/patches/: libfm-job-orig.diff  libfm-job.diff
src/jobs/ui/: gtk-ui.vala  rename-dlg.vala
src/old/: fm-file-launcher.c  fm-gtk-file-launcher.c  fm-gtk-launcher.c
src/tests/: Makefile.am  automount.c  main.c
src/tests/FileManager/: Application.vala  ManagerWindow.vala
src/utils/: fm-app-info.c  fm-archiver.h  fm-clipboard.c  fm-clipboard.h  fm-debug.h  fm-dlg-utils.c  fm-dlg-utils.h  fm-file-menu.c  fm-file-menu.h  fm-file-ops.c  fm-file-ops.h  fm-launch.c  fm-launch.h  fm-mount.c  fm-mount.h  fm-msgbox.c  fm-msgbox.h  fm-select-folder-dlg.c  fm-select-folder-dlg.h  fm-trash.c  fm-trash.h  fm-user-input-dlg.c  fm-user-input-dlg.h  fm-utils.c  fm-utils.h
vapi/: Makefile.am  debug.vapi  libfmcore-jobs.vapi  libfmcore-private.vapi  libfmcore-temp.vapi  libfmcore.vapi  vconfig.vapi
